--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
 @import './styles/layout';
 @import './styles/navbar';
 @import './styles/typography';
+@import './styles/title';
+@import './styles/about';
+@import './styles/skill';
+@import './styles/service';
 
 * {
   padding: 0;
@@ -12,4 +16,12 @@ body {
   color: #a4acc4;
   font-family: 'M PLUS Rounded 1c', sans-serif;
   font-size: 1.2rem;
+}
+
+span {
+  color: #037fff;
+}
+
+html {
+  overflow-y: scroll;
 }
