--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -15,5 +15,8 @@
     background-image: url(../images/long-img.png);
     display: grid;
     position: relative;
+    .content {
+      margin: 5rem 15rem;
+    }
   }
 }
