--- a/src/styles/_service.scss
+++ b/src/styles/_service.scss
@@ -33,7 +33,7 @@
     }
 
     img {
-      height: 10rem;
+      height: 3.5rem;
     }
   }
 }
@@ -41,5 +41,5 @@
 .services-container {
   display: flex;
   justify-content: space-between;
-  margin: 4rem 0;
+  margin-top: 4rem;
 }
