--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import './styles/skill';
 @import './styles/service';
 @import './styles/interest';
+@import './styles/contact';
 
 * {
   padding: 0;
