--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -17,7 +17,7 @@
       img {
         width: 85%;
         border-radius: 100%;
-        border: 5px solid #661180;
+        border: 5px solid #28232e;
         margin-bottom: 1rem;
         &:hover{
           border: 5px solid #b44f0c;
@@ -75,5 +75,5 @@
 }
 
 .active {
-  background-color: #b44f0c
+  background-color: #b44f0c;
 }
