--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -2,7 +2,7 @@
   .sidebar {
     width: 16%;
     height: 100vh;
-    background-color: #212938;
+    background-color: #1a1f27;
     position: fixed;
     border-right: 1px solid #2e344e;
   }
@@ -12,7 +12,7 @@
     margin-left: 16%;
     background-color: #10121B;
     min-height: 100vh;
-    background-image: url(../images/long-img.png);
+    background-image: url(../images/background.png);
     display: grid;
     position: relative;
     .content {
