--- a/src/App.scss
+++ b/src/App.scss
@@ -1,42 +1,43 @@
-@import './styles/layout';
-@import './styles/navbar';
-@import './styles/typography';
-@import './styles/title';
-@import './styles/about';
-@import './styles/skill';
-@import './styles/service';
-@import './styles/interest';
-@import './styles/contact';
+   @import './styles/layout';
+   @import './styles/navbar';
+   @import './styles/typography';
+   @import './styles/title';
+   @import './styles/about';
+   @import './styles/skill';
+   @import './styles/service';
+   @import './styles/work';
+   @import './styles/interest';
+   @import './styles/contact';
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+   * {
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   }
 
-body {
-  color: #a4acc4;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 1.2rem;
-}
+   body {
+   color: #a4acc4;
+   font-family: 'M PLUS Rounded 1c', sans-serif;
+   font-size: 1.2rem;
+   }
 
-body::-webkit-scrollbar {
-  width: 8px;
-}
+   body::-webkit-scrollbar {
+   width: 8px;
+   }
 
-body::-webkit-scrollbar-thumb {
-  background-color: #1861aa79;
-  border-radius: 50px;
-}
+   body::-webkit-scrollbar-thumb {
+   background-color: #1861aa79;
+   border-radius: 50px;
+   }
 
-body::-webkit-scrollbar-track {
-  background-color: #5d5f64;
-}
+   body::-webkit-scrollbar-track {
+   background-color: #5d5f64;
+   }
 
-span {
-  color: #037fff;
-}
+   span {
+   color: #037fff;
+   }
 
-html {
-  overflow-y: scroll;
-}
+   html {
+   overflow-y: scroll;
+   }
