--- a/src/styles/_interest.scss
+++ b/src/styles/_interest.scss
@@ -1,43 +1,43 @@
 .InterestPage {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2.5rem;
-  margin-bottom: 2rem;
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+   grid-gap: 2rem;
+   margin-bottom: 2rem;
 
-  .interest {
-    background-color: #161925;
-    width: 100%;
-    padding: 1rem;
-    overflow: hidden;
-
-    .interest-content {
-      padding-bottom: 2rem;
+   .interest {
+      background-color: #161925;
+      width: 100%;
+      padding: .5rem;
       overflow: hidden;
-
-      img {
-        width: 100%;
-        transition: all .2s ease-in-out;
-        &:hover {
-          transform: scale(1.2);
-        }
-        padding-bottom: 2.2rem;
+      &:hover {
+         transform: scale(1.3);
+         z-index: 3;
       }
+      transition: all .3s ease-in-out;
 
-      .interest-link {
-        color: inherit;
-        font-family: inherit;
-        text-decoration: none;
-        font-size: 1.8rem;
-        padding-top: 2rem;
-        transition: all .4s ease-in-out;
-        &:hover {
-          color: #037fff;
-        }
+      .interest-content {
+         padding-bottom: 2rem;
+
+         img {
+         width: 100%;
+         padding-bottom: .5rem;
+         }
+
+         .interest-link {
+         color: inherit;
+         font-family: inherit;
+         text-decoration: none;
+         font-size: 1rem;
+         padding-top: 2rem;
+         transition: all .4s ease-in-out;
+         &:hover {
+            color: #037fff;
+         }
+         }
       }
-    }
-  }
-}
+   }
+   }
 
-.i-title {
-  margin-bottom: 4rem;
+   .i-title {
+   margin-bottom: 4rem;
 }
