--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,42 +1,50 @@
 .ContactItem {
-  display: flex;
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+   display: flex;
+   margin-top: 4rem;
+   margin-bottom: 4rem;
 
-  .form-control {
-    background-color: white;
-    margin:0.5rem;
-    font-size: 1.5rem;
-    border: 5px solid #003e7c;
-    border-radius: 15px;
-    outline: none;
-    height:4rem;
-    width: 40rem;
-    font-family: Arial, Helvetica, sans-serif;
-    text-indent: .6rem;
-  }
+   .form-control {
+      background-color: white;
+      margin:0.5rem;
+      font-size: 1.5rem;
+      border: 5px solid #003e7c;
+      border-radius: 15px;
+      outline: none;
+      height:4rem;
+      width: 40rem;
+      font-family: Arial, Helvetica, sans-serif;
+      text-indent: .6rem;
 
-  .form-control-ta {
-    background-color: white;
-    margin:0.5rem;
-    font-size: 1.5rem;
-    border: 5px solid #003e7c;
-    border-radius: 15px;
-    outline: none;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+      @media screen and (max-width: 840px) {
+         width: 30rem;
+      }
 
-  .submit-button {
-    margin-left: 0.5rem;
-  }
+      @media screen and (max-width: 420px) {
+         width: 20rem;
+      }
+   }
+
+   .form-control-ta {
+      background-color: white;
+      margin:0.5rem;
+      font-size: 1.5rem;
+      border: 5px solid #003e7c;
+      border-radius: 15px;
+      outline: none;
+      font-family: Arial, Helvetica, sans-serif;
+   }
+
+   .submit-button {
+      margin-left: 0.5rem;
+   }
 }
 
 .c-title {
-  margin-bottom: 10rem;
+   margin-bottom: 10rem;
 }
 
 ::placeholder {
-  font-style: italic;
-  font-size: 1.8rem;
-  font-family: "Lucida Console", "Courier New", monospace;
+   font-style: italic;
+   font-size: 1.8rem;
+   font-family: "Lucida Console", "Courier New", monospace;
 }
